# portfolio-website

./: .dockerignore  .env  .gitignore  .testenv  Backend  Frontend  docker-compose.yml  generate.sh  shell.nix
backend/: Cargo.toml  build.rs
backend/src/: correction.rs  index.rs  main.rs  parse.rs  preprocessing.rs  process_files.rs  socket.rs  types.rs
data/: 5eCommander.md  _Template.md
frontend/: .gitignore  Dockerfile  bun.lockb  generate.sh  index.html  index.ts  package-lock.json  package.json  tsconfig.json
frontend/proto/: portfolio.proto
frontend/public/: index.html
frontend/public/css/: style.css
frontend/src/: main.ts  project.ts  searchbar.ts  style.css  tag.ts  testdata.ts  types.ts
frontend/src/proto/: portfolio.proto
proto/: portfolio.proto
